# rex-engine

./: BUILDING.md  CMakeLists.txt  methods.cmake  options.cmake
core/: CMakeLists.txt  core_bind.cpp  core_bind.h  core_builders.py  core_constants.cpp  core_constants.h  core_string_names.h  doc_data.h  register_core_types.cpp  typedefs.h  version.h
core/config/: engine.cpp  engine.h  project_settings.cpp  project_settings.h
core/input/: input.h  (+8 more)
drivers/: CMakeLists.txt  register_driver_types.cpp
editor/: CMakeLists.txt  action_map_editor.cpp  action_map_editor.h  add_metadata_dialog.cpp  add_metadata_dialog.h  animation_bezier_editor.cpp  animation_bezier_editor.h  animation_track_editor.cpp  animation_track_editor.h  animation_track_editor_plugins.cpp  animation_track_editor_plugins.h  audio_stream_preview.h  code_editor.cpp  code_editor.h  connections_dialog.cpp  connections_dialog.h  create_dialog.cpp  create_dialog.h  credits_roll.cpp  credits_roll.h  dependency_editor.cpp  dependency_editor.h  directory_create_dialog.cpp  directory_create_dialog.h  doc_tools.cpp  doc_tools.h  editor_about.cpp  editor_about.h  editor_asset_installer.cpp  editor_asset_installer.h  editor_atlas_packer.cpp  editor_atlas_packer.h  editor_audio_buses.cpp  editor_audio_buses.h  editor_autoload_settings.cpp  editor_autoload_settings.h  editor_build_profile.cpp  editor_build_profile.h  editor_command_palette.cpp  editor_command_palette.h  (+127 more)
generators/: rex_editor_builders.py  rex_editor_icons_builders.py
main/: CMakeLists.txt  main.cpp  main.h  main_timer_sync.cpp  main_timer_sync.h  performance.cpp  performance.h  steam_tracker.h
modules/: CMakeLists.txt  register_module_types.h
modules/enet/: CMakeLists.txt  enet_connection.cpp  enet_connection.h  enet_multiplayer_peer.h  enet_packet_peer.h  register_types.cpp  register_types.h
modules/godot_physics_2d/: CMakeLists.txt  godot_area_2d.h  godot_body_2d.h  godot_body_direct_state_2d.h  godot_broad_phase_2d.h  godot_broad_phase_2d_bvh.h  godot_collision_object_2d.h  godot_collision_solver_2d_sat.cpp  godot_physics_server_2d.cpp  godot_physics_server_2d.h  godot_shape_2d.cpp  godot_shape_2d.h  godot_space_2d.cpp  godot_space_2d.h  godot_step_2d.cpp  godot_step_2d.h  register_types.cpp  register_types.h
modules/godot_physics_3d/: CMakeLists.txt  godot_area_3d.h  godot_body_3d.h  godot_body_direct_state_3d.h  godot_body_pair_3d.h  godot_broad_phase_3d.h  godot_broad_phase_3d_bvh.h  godot_collision_object_3d.h  godot_collision_solver_3d_sat.cpp  godot_physics_server_3d.cpp  godot_physics_server_3d.h  godot_shape_3d.cpp  godot_shape_3d.h  godot_soft_body_3d.cpp  godot_soft_body_3d.h  godot_space_3d.cpp  godot_space_3d.h  godot_step_3d.cpp  godot_step_3d.h  register_types.cpp  register_types.h
modules/godot_physics_3d/joints/: godot_jacobian_entry_3d.h
modules/mono/: CMakeLists.txt  class_db_api_json.cpp  class_db_api_json.h  csharp_script.cpp  csharp_script.h  godotsharp_dirs.cpp  godotsharp_dirs.h  interop_types.h  managed_callable.h  mono_gc_handle.h  register_types.cpp  register_types.h  signal_awaiter_utils.h
modules/mono/editor/: bindings_generator.cpp  bindings_generator.h  code_completion.cpp  code_completion.h  editor_internal_calls.cpp  editor_internal_calls.h  hostfxr_resolver.cpp  hostfxr_resolver.h  semver.h
modules/mono/glue/: runtime_interop.cpp  runtime_interop.h
modules/mono/mono_gd/: gd_mono.cpp  gd_mono.h  gd_mono_cache.cpp  gd_mono_cache.h
modules/mono/utils/: macos_utils.cpp  macos_utils.h  naming_utils.cpp  naming_utils.h  path_utils.cpp  path_utils.h  string_utils.cpp  string_utils.h
modules/ogg/: CMakeLists.txt  ogg_packet_sequence.cpp  ogg_packet_sequence.h  register_types.h
platform/: CMakeLists.txt
platform/macos/: CMakeLists.txt  crash_handler_macos.mm  dir_access_macos.h  dir_access_macos.mm  display_server_macos.h  display_server_macos.mm  gl_manager_macos_angle.h  gl_manager_macos_legacy.h  godot_application.h  godot_application_delegate.h  godot_button_view.h  godot_content_view.h  godot_content_view.mm  godot_main_macos.mm  godot_menu_item.h  godot_open_save_delegate.h  godot_status_item.h  godot_window.h  godot_window_delegate.h  key_mapping_macos.h  key_mapping_macos.mm  macos_terminal_logger.h  native_menu_macos.h  native_menu_macos.mm  os_macos.h  os_macos.mm  platform_gl.h  platform_thread.h  rendering_context_driver_vulkan_macos.h  tts_macos.h
platform/macos/export/: export_plugin.cpp  export_plugin.h
platform/windows/: CMakeLists.txt  crash_handler_windows_seh.cpp  crash_handler_windows_signal.cpp  display_server_windows.cpp  display_server_windows.h  drop_target_windows.cpp  gl_manager_windows_angle.h  gl_manager_windows_native.cpp  gl_manager_windows_native.h  godot_res.rc  godot_res_wrap.rc  godot_windows.cpp  key_mapping_windows.cpp  key_mapping_windows.h  native_menu_windows.cpp  native_menu_windows.h  os_windows.cpp  os_windows.h  platform_gl.h  rendering_context_driver_vulkan_windows.cpp  rendering_context_driver_vulkan_windows.h  tts_windows.h  wgl_detect_version.cpp  windows_terminal_logger.cpp  windows_terminal_logger.h  windows_utils.cpp  windows_utils.h
platform/windows/export/: export.cpp  export_plugin.cpp  export_plugin.h
scene/: CMakeLists.txt  property_list_helper.h  property_utils.cpp  property_utils.h  register_scene_types.cpp  scene_string_names.h
servers/: CMakeLists.txt  audio_server.cpp  audio_server.h  camera_server.cpp  camera_server.h  display_server.cpp  display_server.h  display_server_headless.h  navigation_server_2d.cpp  navigation_server_2d.h  navigation_server_2d_dummy.h  navigation_server_3d.cpp  navigation_server_3d.h  navigation_server_3d_dummy.h  physics_server_2d.cpp  physics_server_2d.h  physics_server_2d_wrap_mt.h  physics_server_3d.cpp  physics_server_3d.h  physics_server_3d_dummy.h  physics_server_3d_wrap_mt.h  register_server_types.cpp  rendering_server.cpp  rendering_server.h  text_server.cpp  text_server.h  xr_server.cpp  xr_server.h
tests/: display_server_mock.h  test_macros.h  test_main.cpp  test_utils.cpp  test_validate_testing.h
(+2423 files in other folders)
